# dndproject

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Makefile  PRD.md  README-GCP.md  README.md  alembic.ini  cloudbuild-backend.yaml  cloudbuild-frontend.yaml  create_from_file.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  frontend_log.txt  generate_docs.sh  main.py  mkdocs.yml  package-lock.json  package.json  patch_deploy_debug.py  podman-compose.yml  render.yaml  run_app.sh  run_dev.sh  run_e2e.sh  run_tests.sh  run_tests_dev.sh  setup.sh  setup_dev.sh  stop_dev.sh  test.db
.githooks/: pre-push
backend/: Containerfile  Containerfile.dev  alembic.ini  benchmark_rewards.py  gunicorn_conf.py  pyproject.toml  requirements.txt  run_alembic.py  seed.py
backend/app/: all_models.py  config.py  crud.py  database.py  dependencies.py  llm_service.py  logging_config.py  main.py  models.py  schemas.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_essence_resource.py  0002_rename_factions.py  0003_character_stats_gold.py  0004_mission_rewards_gold.py  0005_add_hidden_rewards.py  (+8 more)
backend/scripts/: seed.py  seed_admin_dev.py
backend/tests/: benchmark_mission.py  benchmark_roster_sqlite.py  conftest.py  test_auth_discord_mock.py  test_auth_flow.py  test_auth_login.py  test_campaigns.py  test_characters.py  test_crud.py  test_factions.py  test_ledger.py  test_main.py  test_map.py  test_maps.py  test_oneshot.py  test_sessions_proposals.py  test_ship.py  test_smoke.py
(+261 files in other folders)
